@@ -1,3 +1,9 @@
+2000-12-30  John Harper  <jsh@eazel.com>
+
+	* widget.jl (make-choice-item): options for the `choice' widget
+	can now be formatted as `(SYMBOL "REAL-NAME")' as well a
+	`SYMBOL'. The REAL-NAME string will be displayed when given
+
 2000-12-22  John Harper  <jsh@eazel.com>
 
 	* widgets/list.jl: never destructively modify the list, fixes
